update italian translation menu

--- a/plugins/aps/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/aps/src/main/res/values-it-rIT/strings.xml
@@ -369,7 +369,7 @@
     <string name="Enable_xdripOM_title">xDrip supporto BG sensore 1 minuto</string>
     <string name="oaps_aimi_enableMlautoDrive_title">SPERIMENTALE : Auto Drive FULL CLOSED LOOP</string>
     <string name="prebolus_autodrive_mode_summary">Autodrive will send a prebolus regarding the raise detection conditions</string>
-    <string name="prebolus_autodrive_mode_title">Autodrive prebolus</string>
+    <string name="prebolus_autodrive_mode_title">Prebolo Autodrive</string>
     <string name="oaps_aimi_AutodriveISF_summary">under this ISF value, the condition to receive the prebolus is true</string>
     <string name="oaps_aimi_AutodriveISF_title">ISF value Autodrive for prebolus</string>
     <string name="OApsAIMI_CombinedDelta_summary">"Greater than value, the condition to receive the prebolus is true. "</string>
