--- a/plugins/aps/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/aps/src/main/res/values-it-rIT/strings.xml
@@ -274,6 +274,10 @@
     <string name="Enable_basal_title">Enable Basal</string>
     <string name="Enable_basal_summary">This option will enable basal from the profile when bg is greater than 80 and delta not negative.</string>
     <string name="oaps_aimi_enableDeleteLine_title">Enable the possibility to delete one day in the ML Training</string>
+
+
+    <!--    AIMI INIZIO TRADUZIONE PREFENZE E MENU   -->
+
     <string name="countsteps_watch_title">Abilita conteggio passi da orologio</string>
     <string name="countsteps_watch_summary">Questa opzione abilita la conta dei passi ricevendo i dati dall\'orologio, invece che dal telefono.</string>
     <string name="oaps_aimi_weight_summary">Peso in kg per calcolare la basale</string>
@@ -284,8 +288,8 @@
     <string name="oaps_aimi_cho_title">Carboidrati quantità media pranzo/cena</string>
     <string name="aimi_preferences">AIMI pannello impostazioni</string>
     <string name="user_preferences">Profilo utente AIMI</string>
-    <string name="reactivity_preferences"><![CDATA[Glicemia < di 120 - Impostazioni]]></string>
-    <string name="high_BG_preferences">Glicemia > di 120 - Impostazioni</string>
+    <string name="reactivity_preferences"><![CDATA[Glicemia < di 120]]></string>
+    <string name="high_BG_preferences">Glicemia > di 120</string>
     <string name="training_ml_modes_preferences">HCL - Modalità pasto manuale</string>
     <string name="autodrive_preferences">FLC - Autodrive - Rilevamento pasto autom.</string>
     <string name="AAPS_SMB_Settings">Sensibilità - Impostazioni AAPS</string>
@@ -359,11 +363,6 @@
     <string name="OApsAIMI_BFFactor_title">Reattività</string>
     <string name="oaps_aimi_BF_interval_summary">Interval between 2 SMB mode breakfast</string>
     <string name="oaps_aimi_BF_interval_title">SMB Interval Mode Breakfast</string>
-
-
-
-    <!--    AIMI INIZIO TRADUZIONE PREFENZE E MENU   -->
-
     <string name="oaps_aimi_logsize_summary">log colon size</string>
     <string name="oaps_aimi_logsize_title">Numero linee tabella analisi AIMI nella scheda Loop</string>
     <string name="Enable_xdripOM_title">xDrip supporto BG sensore 1 minuto</string>
@@ -389,8 +388,8 @@
     <string name="user_preferences_title_menu">Profilo utente AIMI</string>
     <string name="autodrive_preferences_title_menu">Autodrive - Rilevamento pasto autom.</string>
     <string name="manual_modes_preferences_title_menu">Pasti / Attività manuali</string>
-    <string name="bg_under_120_preferences_title_menu"><![CDATA[Glicemia < 120]]></string>
-    <string name="bg_over_120_preferences_title_menu">Glicemia > 120</string>
+    <string name="bg_under_120_preferences_title_menu"><![CDATA[Glicemia < 120 - Impostazioni]]></string>
+    <string name="bg_over_120_preferences_title_menu">Glicemia > 120 - Impostazioni</string>
     <string name="aaps_preferences_title_menu">Sensibilità AAPS</string>
     <string name="training_ml_breakfast_modes_preferences">Colazione</string>
     <string name="training_ml_lunch_modes_preferences">Pranzo</string>
