re-organized separated well aimi core variables, aimi menu variables, aimi tables variables

--- a/plugins/aps/src/main/res/values-sk-rSK/strings.xml
+++ b/plugins/aps/src/main/res/values-sk-rSK/strings.xml
@@ -204,4 +204,215 @@
     <string name="enableSMB_EvenOn_OddOff_always_summary">\npovolené...\nkeď má aktivny cieľ (mmol/L) párne číslo za desatinou čiarkou\nalebo ak je hodnota aktívneho cieľa (mg/dL) párne číslo\n\n\inak zakázané</string>
     <string name="openapsama_iob_threshold_percent_summary" formatted="false">Percento maxIOB, pri prekročení ktorého sú SMB zakázané.\nPredvolená hodnota: 100 %\nPri hodnote 100 % je táto funkcia vypnutá.</string>
     <string name="openapsama_iob_threshold_percent">Prahová hodnota maxIOB v percentách. Ak sa dosiahne, vypnú sa SMB\n(iob_threshold_percent)</string>
+    <!-- AIMI START TRANSLATION CORE -->
+
+    <string name="key_openapsaimi_settings">key_openapsaimi_settings</string>
+    <string name="key_openapsaimi_max_smb">key_openapsaimi_max_smb</string>
+    <string name="key_aimiweight">key_aimiweight</string>
+    <string name="key_tdd7">key_tdd7</string>
+    <string name="key_cho">key_cho</string>
+    <string name="key_B30_upperBG">key_B30_upperBG</string>
+    <string name="key_B30_upperdelta">key_B30_upperdelta</string>
+    <string name="key_B30_duration">key_B30_duration</string>
+    <string name="key_oaps_aimi_evening_factor">key_oaps_aimi_evening_factor</string>
+    <string name="key_oaps_aimi_morning_factor">key_oaps_aimi_morning_factor</string>
+    <string name="key_oaps_aimi_afternoon_factor">key_oaps_aimi_afternoon_factor</string>
+    <string name="key_oaps_aimi_hyper_factor">key_oaps_aimi_hyper_factor</string>
+    <string name="key_DynISFAdjusthyper">key_DynISFAdjusthyper</string>
+    <string name="key_DynISF_Adjust">key_DynISF_Adjust</string>
+    <string name="key_enable_basal">key_enable_basal</string>
+    <string name="key_prebolus_meal_mode">key_prebolus_meal_mode</string>
+    <string name="key_prebolus_highcarb_mode">key_prebolus_highcarb_mode</string>
+    <string name="key_nb_day_ML_training">key_nb_day_ML_training</string>
+    <string name="key_enable_ML_training">key_enable_ML_training</string>
+    <string name="key_nb_epoch_ML_training">key_nb_epoch_ML_training</string>
+    <string name="key_nb_learningrate_ML_training">key_nb_learningrate_ML_training</string>
+    <string name="key_nb_iteration_ML_training">key_nb_iteration_ML_training</string>
+    <string name="key_openapsaimi_fixed_tbr_rise">key_openapsaimi_fixed_tbr_rise</string>
+
+    <!--    AIMI START TRANSLATION MENU , SUBMENU AND PREFERENCES   -->
+
+    <string name="openapsaimi">"AIMI 3.3"</string>
+    <string name="openapsaimi_maxsmb_summary">Value of max smb size</string>
+    <string name="openapsaimi_maxsmb_title">OpenapsAIMI Max SMB</string>
+    <string name="description_openapsaimi">Small micro boluses based on Artificial Intelligence and Machine Learning.</string>
+    <string name="oaps_aimi_shortname">OpenApsAIMI</string>
+    <string name="count_steps_watch">count_steps_watch</string>
+    <string name="oaps_aimi_evening_factor_summary">% of Reactivity of the plugin between 6 pm and midnight</string>
+    <string name="oaps_aimi_evening_factor_title">Evening Reactivity Percentage</string>
+    <string name="oaps_aimi_afternoon_factor_title">Afternoon Reactivity Percentage</string>
+    <string name="oaps_aimi_morning_factor_title">Morning Reactivity Percentage</string>
+    <string name="oaps_aimi_morning_factor_summary">Morning Reactivity Percentage between midnight and 11 am</string>
+    <string name="oaps_aimi_afternoon_factor_summary">Afternoon reactivity percentage between 12pm and 6 pm</string>
+    <string name="oaps_aimi_tbr_fixed_rise_summary">Value Fixed TBR Rise when rise meal detect</string>
+    <string name="oaps_aimi_tbr_fixed_rise_title">Value Fixed TBR Rise detect</string>
+    <string name="oaps_aimi_hyper_factor_summary"><![CDATA[Reactivity factor when bg > 120]]></string>
+    <string name="oaps_aimi_hyper_factor_title"><![CDATA[Reactivity factor BG > 120, for Child BG > 180]]></string>
+    <string name="DynISFAdjusthyper_summary"><![CDATA[Increasing this value will increase the velocity to send smb when bg > 120]]></string>
+    <string name="DynISFAdjusthyper_title"><![CDATA[Dynisf Adjustment factor % BG > 120]]></string>
+    <string name="prebolus_meal_mode_summary">If you set a note in action page, with the work meal, you will receive one time this value like a pre-bolus.</string>
+    <string name="prebolus_meal_mode_title">Meal mode pre-bolus</string>
+    <string name="prebolus_highcarb_mode_title">Mode high carb pre-bolus</string>
+    <string name="prebolus_highcarb_mode_summary">If you set a note in action page, with the word highcarb, you will receive this pre-bolus one time.</string>
+    <string name="number_day_ML_training_summary">Number of day to train the model</string>
+    <string name="nb_day_ML_training_title">ML number training day</string>
+    <string name="nb_minutes_ML_training_title">Nb minutes to train the data</string>
+    <string name="number_minutes_training_summary">Nb minutes to train the data for the ML engine</string>
+    <string name="number_epoch_training_summary">NB Epoch to train the data</string>
+    <string name="nb_epoch_ML_training_title">NB Epoch to train the data</string>
+    <string name="number_learningrate_training_summary">nb learning rate to train the data</string>
+    <string name="nb_learningrate_ML_training_title">learning rate to train the data</string>
+    <string name="number_iteration_training_summary">Nb time it will try before stopping the loop if it can not get a satisfying result.</string>
+    <string name="nb_iteration_ML_training_title">NB iteration stopping the loop</string>
+    <string name="DynISF_Adjust_summary" formatted="false">Increase this value greater than 100 if you want to receive more smb. The opposite is true if you receive too much smb.</string>
+    <string name="DynISF_Adjust_title" formatted="false">DynISF factor to increase or discrease the number of SMB</string>
+    <string name="oaps_aimi_mealAdjFact_summary">DynISF adjustment factor for Meal mode</string>
+    <string name="oaps_aimi_mealAdjFact_title">Meal Mode DynISF factor</string>
+    <string name="Enable_basal_title">Enable Basal</string>
+    <string name="Enable_basal_summary">This option will enable basal from the profile when bg is greater than 80 and delta not negative.</string>
+    <string name="countsteps_watch_title">Enable Counting steps from the watch</string>
+    <string name="countsteps_watch_summary">This option will use the hardware from the watch instead of the phone.</string>
+    <string name="oaps_aimi_weight_summary">Weight in kg to calculate the basal</string>
+    <string name="oaps_aimi_weight_title">Weight in kg</string>
+    <string name="oaps_aimi_tdd7_summary">TDD average 7 days</string>
+    <string name="oaps_aimi_tdd7_title">TDD 7 days</string>
+    <string name="oaps_aimi_cho_summary">Average carbs for a meal. it\'s an estimation not a precise value</string>
+    <string name="oaps_aimi_cho_title">CHO Meal average lunch or dinner</string>
+    <string name="aimi_preferences">AIMI specifics settings</string>
+    <string name="user_preferences">Global User Preferences</string>
+    <string name="reactivity_preferences"><![CDATA[Reactivity BG < 120]]></string>
+    <string name="high_BG_preferences">High BG Preferences (BG > 120)</string>
+    <string name="training_ml_modes_preferences">Training ML and Modes</string>
+    <string name="autodrive_preferences">Autodrive settings</string>
+    <string name="AAPS_SMB_Settings">AAPS SMB Settings</string>
+    <string name="oaps_aimi_enableMlTraining_title">Enable ML training calculation</string>
+    <string name="OApsAIMI_MealFactor_summary">% of insulin required by the ai for the meal mode.</string>
+    <string name="OApsAIMI_MealFactor_title">Meal mode reactivity percentage</string>
+    <string name="oaps_aimi_meal_interval_summary">Interval between SMB for the meal mode.</string>
+    <string name="oaps_aimi_meal_interval_title">SMB interval Meal Mode</string>
+    <string name="oaps_aimi_highcarbAdjFact_summary">DynISF adjustment factor for High Carb mode.</string>
+    <string name="oaps_aimi_highcarbAdjFact_title">High Carb Mode DynISF factor</string>
+    <string name="OApsAIMI_HC_Factor_summary">% of insulin required by the ai for the High Carb mode.</string>
+    <string name="OApsAIMI_HC_Factor_title">High Carb mode reactivity percentage</string>
+    <string name="oaps_aimi_HC_interval_summary">Interval between SMB for the high carb mode.</string>
+    <string name="oaps_aimi_HC_interval_title">SMB interval High Carb Mode</string>
+    <string name="prebolus_snack_mode_summary">If you set a note in action page, with the word snack, you will receive this pre-bolus one time.</string>
+    <string name="prebolus_snack_mode_title">Mode snack pre-bolus</string>
+    <string name="oaps_aimi_snackAdjFact_summary">DynISF adjustment factor for Snack mode.</string>
+    <string name="oaps_aimi_snackAdjFact_title">Snack Mode DynISF factor</string>
+    <string name="OApsAIMI_snack_Factor_summary">% of insulin required by the ai for the Snack mode.</string>
+    <string name="OApsAIMI_snack_Factor_title">Snack mode reactivity percentage</string>
+    <string name="oaps_aimi_snack_interval_summary">Interval between SMB for the snack mode.</string>
+    <string name="oaps_aimi_snack_interval_title">SMB interval Snack Mode</string>
+    <string name="oaps_aimi_sleepAdjFact_summary">DynISF adjustment factor for Sleep mode.</string>
+    <string name="oaps_aimi_sleepAdjFact_title">Sleep Mode DynISF factor</string>
+    <string name="OApsAIMI_sleep_Factor_summary">% of insulin required by the ai for the Sleep mode.</string>
+    <string name="OApsAIMI_sleep_Factor_title">Sleep mode reactivity percentage</string>
+    <string name="oaps_aimi_sleep_interval_summary">Interval between SMB for the sleep mode.</string>
+    <string name="oaps_aimi_sleep_interval_title">SMB interval Sleep Mode</string>
+    <string name="OApsAIMI_Enable_pregnancy">Enable Pregnancy mode</string>
+    <string name="OApsAIMI_Enable_honeymoon">Enable child mode for a response better suited to lower insulin needs compared to those of an adult</string>
+    <string name="oaps_aimi_HIGHBG_interval_summary">High BG SMB Interval</string>
+    <string name="oaps_aimi_HIGHBG_interval_title">High BG SMB Interval</string>
+    <string name="openapsaimi_highBG_maxsmb_summary">Max SMB value when bg is greater than 120.</string>
+    <string name="openapsaimi_highBG_maxsmb_title">Max SMB High BG</string>
+    <string name="OApsAIMI_Enable_night_title">Enable Night mode (smb/2)</string>
+    <string name="prebolus_lunch_mode_summary">Prebolus 1/2 lunch mode</string>
+    <string name="prebolus2_lunch_mode_summary">Prebolus 2/2 lunch mode</string>
+    <string name="prebolus_lunch_mode_title">Mode Lunch Prebolus 1/2</string>
+    <string name="prebolus2_lunch_mode_title">Mode Lunch Prebolus 2/2</string>
+    <string name="oaps_aimi_LunchAdjFact_summary">Lunch mode Dynisf Factor</string>
+    <string name="oaps_aimi_LunchAdjFact_title">Lunch Mode Dynisf</string>
+    <string name="prebolus_Dinner_mode_summary">Dinner mode prebolus 1/2</string>
+    <string name="prebolus2_Dinner_mode_summary">Dinner mode prebolus 2/2</string>
+    <string name="prebolus_Dinner_mode_title">Dinner mode prebolus 1/2</string>
+    <string name="prebolus2_Dinner_mode_title">Dinner mode prebolus 2/2</string>
+    <string name="OApsAIMI_LunchFactor_summary">Lunch mode reactivity is % of insulin required for one smb.</string>
+    <string name="OApsAIMI_lunchFactor_title">Lunch mode reactivity</string>
+    <string name="oaps_aimi_lunch_interval_summary">Lunch mode interval SMB</string>
+    <string name="oaps_aimi_lunch_interval_title">Lunch mode interval SMB</string>
+    <string name="oaps_aimi_DinnerAdjFact_summary">Dinner mode Dynisf factor</string>
+    <string name="oaps_aimi_DinnerAdjFact_title">Dinner mode Dynisf</string>
+    <string name="OApsAIMI_DinnerFactor_summary">Dinner mode reactivity % of insulin required for one SMB.</string>
+    <string name="OApsAIMI_DinnerFactor_title">Dinner mode reactitivy</string>
+    <string name="oaps_aimi_Dinner_interval_summary">Dinner mode Interval</string>
+    <string name="oaps_aimi_Dinner_interval_title">Dinner mode Interval</string>
+    <string name="oaps_aimi_enableMlLearningRate_title">Enable Learning Rate variable for better adjustment</string>
+    <string name="oaps_aimi_enableMlFCL_title">Full Closed Loop</string>
+    <string name="oaps_aimi_FCLAdjFact_title">Dynisf Full Closed Loop</string>
+    <string name="oaps_aimi_FCLAdjFact_summary">Dynisf Full Closed Loop by automatic detection.</string>
+    <string name="OApsAIMI_FCLFactor_title">FCL Reactivity</string>
+    <string name="OApsAIMI_FCLFactor_summary">% insulin required for SMB in the FCL mode</string>
+    <string name="oaps_aimi_FCL_interval_summary">FCL SMB interval</string>
+    <string name="oaps_aimi_FCL_interval_title">FCL SMB interval</string>
+    <string name="prebolus_BF_mode_summary">Prebolus 1/2 breakfast mode</string>
+    <string name="prebolus_BF_mode_title">Mode breakfast prebolus 1/2</string>
+    <string name="prebolus2_BF_mode_summary">Prebolus 2/2 breakfast mode</string>
+    <string name="prebolus2_BF_mode_title">Mode breakfast Prebolus 2/2</string>
+    <string name="oaps_aimi_BFdjFact_summary">DynISF mode breakfast</string>
+    <string name="oaps_aimi_BFAdjFact_title">DynISF mode breakfast</string>
+    <string name="OApsAIMI_BFFactor_summary">% insulin required for one smb</string>
+    <string name="OApsAIMI_BFFactor_title">Reactivity mode breakfast</string>
+    <string name="oaps_aimi_BF_interval_summary">Interval between 2 SMB mode breakfast</string>
+    <string name="oaps_aimi_BF_interval_title">SMB Interval Mode Breakfast</string>
+    <string name="oaps_aimi_enableDeleteLine_title">Enable the possibility to delete one day in the ML Training</string>
+    <string name="oaps_aimi_logsize_summary">log colon size</string>
+    <string name="oaps_aimi_logsize_title">Define the log size for the colon in loop page</string>
+    <string name="Enable_xdripOM_title">Enable xdrip bg each one minute</string>
+    <string name="oaps_aimi_enableMlautoDrive_title">Experimental : Auto Drive</string>
+    <string name="prebolus_autodrive_mode_summary">Autodrive will send a prebolus regarding the raise detection conditions</string>
+    <string name="prebolus_autodrive_mode_title">Autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveISF_summary">under this ISF value, the condition to receive the prebolus is true</string>
+    <string name="oaps_aimi_AutodriveISF_title">ISF value Autodrive for prebolus</string>
+    <string name="OApsAIMI_CombinedDelta_summary">"Greater than value, the condition to receive the prebolus is true. "</string>
+    <string name="OApsAIMI_CombinedDelta_title">Combined Delta for autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveTarget_summary">under this target the condition is true to receive the autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveTarget_title">Minimum target Autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveBG_summary">Greater than this BG value, the condition is true to receive the autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveBG_title">minimum bg to recceive autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveDeviation_summary">Greater than this value, the condition is true to receive the autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveDeviation_title">Autodrive min deviation</string>
+    <string name="oaps_aimi_AutodriveAcceleration_summary">BG acceleration, if the acceleration is greater than this value, the condition for autodrive prebolus is true.</string>
+    <string name="oaps_aimi_AutodriveAcceleration_title">Autodrive BG acceleration condition</string>
+    <string name="prebolussmall_autodrive_mode_summary"><![CDATA[use by an early meal detection, bg > 100, predictionBG > 180. The idea is when we get a early detection sending a small smb to avoid negative iob or late correction. can be a good approach for a small snack.]]></string>
+    <string name="prebolussmall_autodrive_mode_title">snack autodrive prebolus/early meal detection</string>
+    <string name="autodrive_max_basal_summary">Meal early detection, fix the maxbasal during 30 minutes</string>
+    <string name="autodrive_max_basal_title">Meal Early Detection TBR</string>
+    <string name="user_preferences_title_menu">Global User Preferences</string>
+    <string name="autodrive_preferences_title_menu">Autodrive settings</string>
+    <string name="manual_modes_preferences_title_menu">Training ML and Modes</string>
+    <string name="bg_under_120_preferences_title_menu"><![CDATA[Reactivity BG < 120]]></string>
+    <string name="bg_over_120_preferences_title_menu">High BG Preferences (BG > 120)</string>
+    <string name="aaps_preferences_title_menu">AAPS SMB Settings</string>
+    <string name="training_ml_breakfast_modes_preferences">Breakfast Mode settings</string>
+    <string name="training_ml_lunch_modes_preferences">Lunch Mode settings</string>
+    <string name="training_ml_dinner_modes_preferences">Dinner Mode settings</string>
+    <string name="training_ml_high_carb_modes_preferences">High Carb Mode settings</string>
+    <string name="training_ml_snack_modes_preferences">Snack Mode settings</string>
+    <string name="training_ml_generic_meal_modes_preferences">Generic Meal Mode settings</string>
+    <string name="training_ml_sleep_modes_preferences">Sleep Mode settings</string>
+    <string name="breakfast_modes_preferences_title_menu">Breakfast - Manual Mode settings</string>
+    <string name="lunch_modes_preferences_title_menu">Lunch - Manual Mode settings</string>
+    <string name="dinner_modes_preferences_title_menu">Dinner - Manual Mode settings</string>
+    <string name="snack_modes_preferences_title_menu">Snack - Manual Mode settings</string>
+    <string name="high_carb_modes_preferences_title_menu">High Carb - Manual Mode settings</string>
+    <string name="generic_meal_modes_preferences_title_menu">Generic Meal - Manual Mode settings</string>
+    <string name="sleep_modes_preferences_title_menu">Sleep - Manual Mode - settings</string>
+
+    <!--    AIMI START TRANSLATION AIMI TABLE PLUGIN -->
+
+    <string name="table_plugin_main_title_1">AAPS-MASTER-AIMI</string>
+    <string name="table_plugin_main_title_2">OpenApsAIMI Settings</string>
+    <string name="table_plugin_main_title_3">30 April 2025</string>
+    <string name="table_plugin_request_title">Request</string>
+    <string name="table_plugin_smb_prediction_title">SMB Prediction</string>
+    <string name="table_plugin_adjusted_factors_title">Adjusted Factors</string>
+    <string name="table_plugin_limits_title">Limits and Conditions</string>
+    <string name="table_plugin_glucose_title">Glucose Data</string>
+    <string name="table_plugin_tir_title">TIR Data</string>
+    <string name="table_plugin_steps_title">Step Data</string>
+    <string name="table_plugin_heart_title">Heart Rate Data</string>
+    <string name="table_plugin_manual_modes_title">Modes</string>
+    <string name="table_plugin_miscellaneous_title">Miscellaneous</string>
 </resources>
+
