--- a/plugins/aps/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/aps/src/main/res/values-it-rIT/strings.xml
@@ -288,9 +288,9 @@
     <string name="user_preferences">Profilo utente AIMI</string>
     <string name="reactivity_preferences"><![CDATA[Glicemia < di 120]]></string>
     <string name="high_BG_preferences">Glicemia > di 120</string>
-    <string name="training_ml_modes_preferences">HCL - Modalità pasto manuale</string>
-    <string name="autodrive_preferences">FLC - Autodrive - Rilevamento pasto autom.</string>
-    <string name="AAPS_SMB_Settings">Sensibilità - Impostazioni AAPS</string>
+    <string name="training_ml_modes_preferences">Pasto / Attività manuale</string>
+    <string name="autodrive_preferences">Autodrive - Rilevamento pasto automatico</string>
+    <string name="AAPS_SMB_Settings">Sensibilità AAPS</string>
     <string name="oaps_aimi_enableMlTraining_title">Abilita apprendimento A.I.</string>
     <string name="OApsAIMI_MealFactor_summary">% of insulin required by the ai for the meal mode.</string>
     <string name="OApsAIMI_MealFactor_title">Modalità Pasto Generico percentuale Reattività</string>
@@ -384,11 +384,11 @@
     <string name="autodrive_max_basal_summary">Quando viene rilevato precocemente un pasto, AIMI esegue una basale fissa per 30 minuti. Inserire il valore orario di questa basale (es. 4 unità, farà 2 unità in 30 minuti)</string>
     <string name="autodrive_max_basal_title">Massimo valore TBR U/hr quando viene rilevato un pasto</string>
     <string name="user_preferences_title_menu">Profilo utente AIMI</string>
-    <string name="autodrive_preferences_title_menu">Autodrive - Rilevamento pasto autom.</string>
-    <string name="manual_modes_preferences_title_menu">Pasti / Attività manuali</string>
+    <string name="autodrive_preferences_title_menu">Autodrive - Rilevamento pasto autom. - Impostazioni</string>
+    <string name="manual_modes_preferences_title_menu">Pasto / Attività manuale - Impostazioni</string>
     <string name="bg_under_120_preferences_title_menu"><![CDATA[Glicemia < 120 - Impostazioni]]></string>
     <string name="bg_over_120_preferences_title_menu">Glicemia > 120 - Impostazioni</string>
-    <string name="aaps_preferences_title_menu">Sensibilità AAPS</string>
+    <string name="aaps_preferences_title_menu">Sensibilità AAPS - Impostazioni</string>
     <string name="training_ml_breakfast_modes_preferences">Colazione</string>
     <string name="training_ml_lunch_modes_preferences">Pranzo</string>
     <string name="training_ml_dinner_modes_preferences">Cena</string>
