new tbr fixed at rise detection preferences value for manual meal modes, and menu related preferences

--- a/plugins/aps/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/aps/src/main/res/values-it-rIT/strings.xml
@@ -403,6 +403,8 @@
     <string name="high_carb_modes_preferences_title_menu">High Carb - Modalità manuale - Impostaz.</string>
     <string name="generic_meal_modes_preferences_title_menu">Pasto generico - Modalità manuale - Impostaz.</string>
     <string name="sleep_modes_preferences_title_menu">Riposo - Modalità manuale - Impostaz.</string>
+    <string name="meal_modes_max_basal_summary">Meal early detection, fix the maxbasal during 30 minutes</string>
+    <string name="meal_modes_max_basal_title">Meal Early Detection TBR</string>
 
     <!--    AIMI INIZIO TRADUZIONE TABELLA PLUGIN  -->
     <string name="table_plugin_main_title_1">AIMI-3.3.2</string>
