--- a/plugins/aps/src/main/res/values/strings.xml
+++ b/plugins/aps/src/main/res/values/strings.xml
@@ -420,6 +420,8 @@
     <string name="high_carb_modes_preferences_title_menu">High Carb - Manual Mode settings</string>
     <string name="generic_meal_modes_preferences_title_menu">Generic Meal - Manual Mode settings</string>
     <string name="sleep_modes_preferences_title_menu">Sleep - Manual Mode - settings</string>
+    <string name="meal_modes_max_basal_summary">Meal early detection, fix the maxbasal during 30 minutes</string>
+    <string name="meal_modes_max_basal_title">Meal Early Detection TBR</string>
 
         <!--    AIMI START TRANSLATION AIMI TABLE PLUGIN -->
 
